# wind

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  submit_job.sh
configs/: eval.yaml  train.yaml
configs/callbacks/: default-second-stage.yaml  default.yaml  default_test.yaml  eval.yaml  extract_forecast_data.yaml  extract_rollout_data.yaml  rollout.yaml
configs/data/: era5.yaml  era5_0p25deg.yaml  era5_1p5deg.yaml
configs/debug/: default.yaml  default_cpu.yaml  default_cvit.yaml  default_gpu.yaml
configs/experiment/era5/train/: 6hourly.yaml  default.yaml  era5_0p25deg.yaml  era5_1p5deg.yaml
configs/logger/: wandb.yaml
configs/model/era5/: uvit.yaml
configs/paths/: era5.yaml
configs/trainer/: default.yaml
scripts/: benchmark_dataloader.py  benchmark_memory.py
src/: eval.py  train.py
src/datasets/: era5.py
src/datasets/stats/: 1959-2022-6h-240x121_equiangular_with_poles_conservative_stats.pkl
src/models/dcae/: autoencoder.py
src/models/dcae/nn/: attention.py  dcae.py  embedding.py  layers.py  vit.py
src/models/dfot/: base_backbone.py
src/models/dfot/dit/: dit3d.py  dit_base.py  dit_blocks.py
src/modules/: callbacks.py  ema.py  embeddings.py  layers.py  metrics.py  optimizers.py  transformer.py  utils.py
src/modules/azula_tools/: custom_denoiser.py  distribution.py  forecast.py  timestep_sampler.py  utils.py
src/utils/: __init__.py  era5.py  logging_utils.py  optimizer.py  plotting.py  spectral.py  torch_utils.py  utils.py
src/utils/utils_tensor/: tensors.py
src/wrappers/: base.py
(+32 files in other folders)
